--- a/todos/todos.scss
+++ b/todos/todos.scss
@@ -1,53 +1,28 @@
-ul {
-  list-style: none;
-
-  &.navigation {
-    padding: 0;
-
-    li {
-      display: inline-block;
-      margin: 0 1rem;
-    }
-  }
-}
-
-input.error {
-  background-color: #FFE7E7;
-}
-label.error{
-  color: #904F4F;
-  padding-left: .5rem;
+label.error {
+  color: #F44336;
 }
 
 .todos {
-  [name=todoItem] {
-    border: none;
-    padding: .15rem;
-
-    &:hover {
-      background-color: #f9f9f9;
-      cursor: pointer;
-    }
-    &:focus {
-      background-color: #f9f9f9;
-      cursor: default;
-      outline: none;
-    }
+  [type="checkbox"] + label:before {
+    margin-top: 15px;
+  }
+  [type="checkbox"] + label:after {
+    margin-top: 13px;
   }
 
   ul {
     .checked {
-      background-color: #f0f0f0;
+      // background-color: #f0f0f0;
       color: #666;
 
       [name=todoItem] {
         text-decoration: line-through;
 
-        &,
-        &:hover,
-        &:focus {
-          background-color: #f0f0f0;
-        }
+        // &,
+        // &:hover,
+        // &:focus {
+        //   background-color: #f0f0f0;
+        // }
       }
     }
   }
